--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "start-local": "nodemon --exec ts-node src/index.ts"
   }
 }
