--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "proyecto_final",
+  "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -7,16 +10,8 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.3"
   },
-  "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/express": "^4.17.17",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
-  },
   "scripts": {
-    "build": "tsc",
-    "start": "node src/index.ts",
-    "start-local": "nodemon --exec ts-node src/index.ts"
+    "start": "node ./src/index.js",
+    "start-local": "nodemon ./src/index.js"
   }
 }
